--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -38,6 +38,8 @@
   
   <script src="src/app/tests/jasmineAMDErrorChecking.js"></script>
   
+  <script src="src/jquery/dist/jquery.js"></script>
+  
   <script src="src/app/tests/SpecApp.js"></script>
   
   <script src="src/app/tests/SpecPopup.js"></script>
