--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>SLC Solar Map</title>
+
+    <!-- META TAGS -->
     <!-- required for IE and bootstrap -->
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
 
-    <title>AGRC Solar Map Widget Demo Page</title>
-    <style>
-        html, body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <meta charset='utf-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
+    <!-- CSS -->
+    <link rel='stylesheet' href='app/resources/App.css'>
 </head>
-<body>
+<body class='claro'>
+    <div data-dojo-type='app/App'></div>
 
-    <div class="agrc-container">
-        <div data-dojo-type='app.App'></div>
-    </div>
-    <script src="EmbeddedMapLoader.js"></script>
+    <!-- build:template
+    <script data-dojo-config="deps:['app/packages', 'app/run']" src='dojo/dojo.js'></script>
+    /build -->
 
+    <!-- build:remove -->
+    <script data-dojo-config="isDebug: 1" src='dojo/dojo.js'></script>
+    <script src='app/packages.js'></script>
+    <script src='app/run.js'></script>
+    <!-- /build -->
 </body>
 </html>
