--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Solar Map Widget Changelog</title>
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css"/>
+    <title>Atlas Utah Change Log</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css"/>
 
     <style type="text/css">
         body {
@@ -11,7 +11,16 @@
     </style>
 </head>
 <body>
-	<h1>Solar Map Widget Changelog</h1>
+    <h1>Solar Map Widget Changelog</h1>
+    <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <a href="https://github.com/agrc/slc-solar/issues?state=open" class="btn btn-default">Open Issues</a>
+
+    <h2>2.0.0-0 <small>Oct 28, 2016</small></h2>
+    <ul>
+        <li>Upgrade project to latest boilerplate.</li>
+        <li>Upgrade all third party libraries including ESRI & Bootstrap.</li>
+        <li>Switch to web mercator.</li>
+    </ul>
     <h2>0.6.0 <small>Jun 20, 2013</small></h2>
     <ul>
         <li>Added Solar by Zip code overlay and associated legend image.</li>
