--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -15,17 +15,11 @@
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/slc-solar/issues?state=open" class="btn btn-default">Open Issues</a>
 
-    <h2>2.0.0-2 <small>Oct 28, 2016</small></h2>
+    <h2>2.0.0 <small>Oct 31, 2016</small></h2>
     <ul>
         <li>Update calculation configs from current production app.</li>
-    </ul>
-    <h2>2.0.0-1 <small>Oct 28, 2016</small></h2>
-    <ul>
         <li>Refine styling of popup.</li>
         <li>Zoom into lowest level on address geocode.</li>
-    </ul>
-    <h2>2.0.0-0 <small>Oct 28, 2016</small></h2>
-    <ul>
         <li>Upgrade project to latest boilerplate.</li>
         <li>Upgrade all third party libraries including ESRI & Bootstrap.</li>
         <li>Switch to web mercator.</li>
