--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -15,6 +15,10 @@
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/slc-solar/issues?state=open" class="btn btn-default">Open Issues</a>
 
+    <h2>2.0.1 <small>Nov 1, 2016</small></h2>
+    <ul>
+        <li>Fix quad word and api to work with iframe domain.</li>
+    </ul>
     <h2>2.0.0 <small>Oct 31, 2016</small></h2>
     <ul>
         <li>Update calculation configs from current production app.</li>
